Release Notes - Flume - Version v0.5.0.rc

** New Feature

    . EsOutput periodically report statistics

** Improvement

    . http monitoring with cmd: [ping, stat, plugins]

** Bug

    . occasionally, EsOutput can't get EsIndex/EsType info
      [maybe] because SkyOutput matches all and because of race condition it recyles first

----