@@ -3,6 +3,8 @@ Release Notes - Flume - Version v0.5.0.rc
 ** New Feature
 
     . EsOutput periodically report statistics
+    . engine permits plugins to register HTTP REST api callback
+    . cardinality output will export/reset counters through REST
 
 ** Improvement
 
